--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,19 @@ rich==13.7.1
 textual==0.55.1
 typing_extensions==4.10.0
 uc-micro-py==1.0.3
+certifi==2024.2.2
+charset-normalizer==3.3.2
+idna==3.6
+linkify-it-py==2.0.3
+markdown-it-py==3.0.0
+mdit-py-plugins==0.4.0
+mdurl==0.1.2
+prometheus_client==0.20.0
+Pygments==2.17.2
+PyYAML==6.0.1
+requests==2.31.0
+rich==13.7.1
+textual==0.55.1
+typing_extensions==4.10.0
+uc-micro-py==1.0.3
+urllib3==2.2.1
