parse prom metrics

--- a/example.config.yml
+++ b/example.config.yml
@@ -1,3 +1,4 @@
 farmer_name: Whiskey
 farmer_container_name: subspace-farm-stack
 farmer_metrics: http://172.18.0.100:9080/metrics
+discord_webhooks_on: True
